# runar

./: Cargo.toml  README.md  TODO.md
src/: event_handler.rs  main.rs  parse_args.rs
testbins/runartest/: Cargo.toml
testbins/runartest/src/: main.rs
tests/: integration.rs
utility/: script.sh  watch.sh
