[package]
name = "runar"
version = "0.1.1"
authors = ["Daniel Ohlsson <dohlsson89@gmail.com>"]
description = "Watches for changes in files and RUNs And Restarts a program"
documentation = "https://github.com/DOhlsson/runar"
homepage = "https://github.com/DOhlsson/runar"
repository = "https://github.com/DOhlsson/runar"
readme = "README.md"
keywords = ["run", "restart", "watch", "nodemon"]
categories = ["command-line-utilities"]
license = "GPL-3.0-or-later"
edition = "2021"
default-run = "runar"

[features]
runartest = []

[dependencies]
# nix = "0.24"
nix = { git = "https://github.com/DOhlsson/nix", branch = "prctl" }
clap = "2.33"
walkdir = "2.3"

[dev-dependencies]
assert_cmd = "2.0"
test-binary = "1.0"

[profile.release]
strip = "symbols"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"

[[bin]]
name = "runartest"
required-features = ["runartest"]
