[package]
name = "runar"
version = "0.2.0"
authors = ["Daniel Ohlsson <dohlsson89@gmail.com>"]
description = "Watches for changes in files and RUNs And Restarts a program"
documentation = "https://github.com/DOhlsson/runar"
homepage = "https://github.com/DOhlsson/runar"
repository = "https://github.com/DOhlsson/runar"
readme = "README.md"
keywords = ["run", "restart", "watch", "nodemon"]
categories = ["command-line-utilities"]
license = "GPL-3.0-or-later"
edition = "2021"
default-run = "runar"

[features]
runartest = []

[dependencies]
nix = { version = "0.29", features = ["event", "poll", "process", "inotify", "signal"] }
pico-args = { version = "0.5", features = ["short-space-opt", "combined-flags"] }
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
test-binary = "1.0"

[profile.release]
strip = "symbols"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"

[[bin]]
name = "runartest"
required-features = ["runartest"]
